--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+jquery-colorbox (1.4.6-1) unstable; urgency=low
+
+  * Imported Upstream version 1.4.6
+  * Added watch file
+  * Updated paths of the javascript files into debian/rules
+  * Added debian/gbp.conf file
+  * Bumped Standard-Version to 3.9.4 (no changes required)
+  * Added Vcs-git and Vcs-browser to debian/control file.
+
+ -- Agustin Henze <tin@sluc.org.ar>  Fri, 22 Mar 2013 17:18:47 -0300
+
 jquery-colorbox (1.3.20-1) unstable; urgency=low
 
   * Initial release. (Closes: #692359)
