--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+jquery-colorbox (1.4.27-1) unstable; urgency=low
+
+  * Update debian/changelog file
+  * Imported Upstream version 1.4.27
+  * Add get-orig-source target into debian/rules file
+
+ -- Agustin Henze <tin@debian.org>  Thu, 01 Aug 2013 19:22:43 -0300
+
 jquery-colorbox (1.4.17-1) unstable; urgency=low
 
   * Imported Upstream version 1.4.17
