--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jquery-colorbox (1.4.33-1) unstable; urgency=low
+
+  * Imported Upstream version 1.4.33
+
+ -- Agustin Henze <tin@debian.org>  Sat, 16 Nov 2013 12:07:10 -0300
+
 jquery-colorbox (1.4.29-1) unstable; urgency=low
 
   * Imported Upstream version 1.4.29
