--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+jquery-colorbox (1.4.37-1) unstable; urgency=medium
+
+  * New upstream release version 1.4.37
+  * Bumped Standard-Version to 3.9.5 (no changes required)
+
+ -- Agustin Henze <tin@debian.org>  Tue, 25 Feb 2014 11:02:09 -0300
+
 jquery-colorbox (1.4.33-1) unstable; urgency=low
 
   * Imported Upstream version 1.4.33
