--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jquery-colorbox (1.6.3-1) unstable; urgency=medium
+
+  * Imported Upstream version 1.6.3
+
+ -- Agustin Henze <tin@debian.org>  Fri, 21 Aug 2015 16:12:50 +0200
+
 jquery-colorbox (1.5.14-1) unstable; urgency=medium
 
   * Imported Upstream version 1.5.14
